Fixed overflow issue

--- a/_app/css/modules/filter-buttons.css
+++ b/_app/css/modules/filter-buttons.css
@@ -2,7 +2,7 @@
 	display: flex;
 	margin: 0 auto;
 	padding: 0 1rem;
-	width: 100vw;
+	width: 100%;
 	align-items: center;
 	justify-content: space-between;
 	background: var(--secondary-color);
